# public-golem

./: LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: notebook.ipynb
src/histree/: __init__.py
src/histree/gb/: __init__.py  core.py  model.py  tree.py
src/histree/rf/: __init__.py  core.py  model.py  preprocessing.py  tree.py
src/histree/swf/: __init__.py  core.py  model.py  tree.py
tests/: test_common.py  test_gb.py  test_rf.py  test_swf.py
